add prestart cmd

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm run build --prefix=frontend",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
